db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/localhost: "true"
        io.kompose.service: db
    spec:
      containers:
        - env:
            - name: ALLOW_EMPTY_PASSWORD
              value: "no"
            - name: MYSQL_DATABASE
              value: profile
            - name: MYSQL_ROOT_PASSWORD
              value: p@55w0rd
          image: mariadb
          name: db
          resources: {}
      restartPolicy: Always
status: {}
